<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jainsaab.popquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:id="@+id/text_view_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_bottom_margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_view_resting_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/android_icon_width"
                        android:layout_height="@dimen/android_icon_height"
                        android:contentDescription="@string/android_icon_content_description"
                        android:paddingEnd="@dimen/android_icon_padding"
                        android:paddingStart="@dimen/android_icon_padding"
                        android:src="@drawable/ic_android_black_24dp"
                        android:tint="@color/androidColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who_developed_android"
                        android:textSize="@dimen/ques_text_view_size" />

                </LinearLayout>

                <EditText
                    android:id="@+id/cardview_edit_text"
                    android:layout_width="@dimen/edit_text_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:hint="@string/firstname_lastname"
                    android:textSize="@dimen/edit_text_size" />

                <LinearLayout
                    android:id="@+id/alert_layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/alert_image_1"
                        android:layout_width="@dimen/android_icon_width"
                        android:layout_height="@dimen/android_icon_height"
                        android:contentDescription="@string/alert_content_description"
                        android:paddingEnd="@dimen/android_icon_padding"
                        android:paddingStart="@dimen/android_icon_padding"
                        tools:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/alert_text_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/alert_text_size"
                        tools:text="@string/alert" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/text_view_card_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_bottom_margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_view_resting_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/android_icon_width"
                        android:layout_height="@dimen/android_icon_height"
                        android:contentDescription="@string/android_icon_content_description"
                        android:paddingEnd="@dimen/android_icon_padding"
                        android:paddingStart="@dimen/android_icon_padding"
                        android:src="@drawable/ic_question_answer_black_24dp"
                        android:tint="@color/androidColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flavour_ques"
                        android:textSize="@dimen/ques_text_view_size" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/check_lollipop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:checked="false"
                    android:text="@string/lollipop"
                    android:textSize="@dimen/edit_text_size" />

                <CheckBox
                    android:id="@+id/check_marshmallow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:checked="false"
                    android:text="@string/marshmallow"
                    android:textSize="@dimen/edit_text_size" />

                <CheckBox
                    android:id="@+id/check_kitkat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:checked="false"
                    android:text="@string/kitkat"
                    android:textSize="@dimen/edit_text_size" />

                <CheckBox
                    android:id="@+id/check_vanilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edit_text_margin"
                    android:checked="false"
                    android:text="@string/vanilla"
                    android:textSize="@dimen/edit_text_size" />

                <LinearLayout
                    android:id="@+id/alert_layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/alert_image_2"
                        android:layout_width="@dimen/android_icon_width"
                        android:layout_height="@dimen/android_icon_height"
                        android:contentDescription="@string/alert_content_description"
                        android:paddingEnd="@dimen/android_icon_padding"
                        android:paddingStart="@dimen/android_icon_padding"
                        tools:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/alert_text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/alert_text_size"
                        tools:text="@string/alert" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/text_view_card_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_bottom_margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_view_resting_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/android_icon_width"
                        android:layout_height="@dimen/android_icon_height"
                        android:contentDescription="@string/android_icon_content_description"
                        android:paddingEnd="@dimen/android_icon_padding"
                        android:paddingStart="@dimen/android_icon_padding"
                        android:src="@drawable/ic_question_answer_black_24dp"
                        android:tint="@color/androidColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/android_belongs_to_which_company_today"
                        android:textSize="@dimen/ques_text_view_size" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radio_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio_intel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/intel"
                        android:textSize="@dimen/edit_text_size" />

                    <RadioButton
                        android:id="@+id/radio_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/google"
                        android:textSize="@dimen/edit_text_size" />

                    <RadioButton
                        android:id="@+id/radio_microsoft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/microsoft"
                        android:textSize="@dimen/edit_text_size" />

                    <RadioButton
                        android:id="@+id/radio_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/facebook"
                        android:textSize="@dimen/edit_text_size" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/alert_layout_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/alert_image_3"
                        android:layout_width="@dimen/android_icon_width"
                        android:layout_height="@dimen/android_icon_height"
                        android:contentDescription="@string/alert_content_description"
                        android:paddingEnd="@dimen/android_icon_padding"
                        android:paddingStart="@dimen/android_icon_padding"
                        tools:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/alert_text_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/alert_text_size"
                        tools:text="@string/alert" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/text_view_card_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_bottom_margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_view_resting_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/android_icon_width"
                        android:layout_height="@dimen/android_icon_height"
                        android:contentDescription="@string/android_icon_content_description"
                        android:paddingEnd="@dimen/android_icon_padding"
                        android:paddingStart="@dimen/android_icon_padding"
                        android:src="@drawable/ic_question_answer_black_24dp"
                        android:tint="@color/androidColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/in_which_year_android_was_developed"
                        android:textSize="@dimen/ques_text_view_size" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radio_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_2005"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/_2005"
                        android:textSize="@dimen/edit_text_size" />

                    <RadioButton
                        android:id="@+id/radio_2007"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/_2007"
                        android:textSize="@dimen/edit_text_size" />

                    <RadioButton
                        android:id="@+id/radio_2003"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/_2003"
                        android:textSize="@dimen/edit_text_size" />

                    <RadioButton
                        android:id="@+id/radio_2008"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/edit_text_margin"
                        android:text="@string/_2008"
                        android:textSize="@dimen/edit_text_size" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/alert_layout_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/alert_image_4"
                        android:layout_width="@dimen/android_icon_width"
                        android:layout_height="@dimen/android_icon_height"
                        android:contentDescription="@string/alert_content_description"
                        android:paddingEnd="@dimen/android_icon_padding"
                        android:paddingStart="@dimen/android_icon_padding"
                        tools:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/alert_text_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/alert_text_size"
                        tools:text="@string/alert" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="@dimen/submit_text_size"
            android:onClick="submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
